Excluded test project from Nuget packing

--- a/test/RedisSessionStateProviderFunctionalTests/RedisSessionStateProvider.FunctionalTests.csproj
+++ b/test/RedisSessionStateProviderFunctionalTests/RedisSessionStateProvider.FunctionalTests.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net462</TargetFramework>
     <AssemblyName>Microsoft.Web.RedisSessionStateProvider.Functional.Tests</AssemblyName>
     <RootNamespace>Microsoft.Web.Redis.FunctionalTests</RootNamespace>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
   <PropertyGroup>
     <DebugSymbols>true</DebugSymbols>
